# LLM-Atlas

./: .env.example  .gitignore  README.md  llm-config.example.yaml  pyproject.toml
01_Fundamentals/: README.md
01_Fundamentals/01_Linguistics/: 01_Linguistic_Foundations.md
01_Fundamentals/02_Classical_NLP/: 01_Text_Preprocessing.md  02_Feature_Engineering.md  03_Statistical_Models.md
01_Fundamentals/03_Deep_Learning/: 01_Word2Vec_Demo.py  01_Word_Embeddings.md  02_Sequence_Models.md  03_Seq2Seq.md
01_Fundamentals/04_Transformer_Era/: 01_Attention.md  01_Attention_Visualization.py  02_Transformer.md  03_Pre_Training_Paradigms.md
01_Fundamentals/05_Applications/: 01_Text_Classification.md  02_Sequence_Labeling.md  03_Information_Extraction.md  04_Machine_Translation.md  05_Text_Summarization.md  06_Dialogue_Systems.md  07_Search_and_Recommendation.md  08_Content_Moderation.md  09_LLM_Disruption_Map.md
02_Scientist/: README.md
02_Scientist/01_Architecture/: 01_Transformer.md  02_Attention.md  03_Efficient_Attention.md  04_Tokenizer.md  05_Embedding.md  06_Position_Encoding.md  07_Architecture_Paradigms.md  08_Dense_Arch.md  09_MoE_Arch.md  (+3 more)
03_Engineering/: README.md
04_Solutions/: 01_Technology_Selection.md  02_Cost_ROI_Analysis_Model.md  03_Domain_Data_Strategy.md  04_Evaluation_Loop.md  05_RAG_Architecture.md  06_Finetuning_Playbook.md  07_Knowledge_Graph_Integration.md  08_Agent_Workflow_Design.md  09_Vertical_Scenario_Templates.md  10_Implementation_Roadmap.md  README.md  finetune_pipeline_demo.py  rag_pipeline_demo.py  technology_selector.py
(+256 files in other folders)
