[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.0",
    "arize-phoenix>=12.31.2",
    "chromadb>=1.4.1",
    "evaluate>=0.4.6",
    "flashboot-core>=0.1.23",
    "google-adk>=1.24.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchainhub>=0.1.21",
    "langsmith>=0.6.4",
    "litellm>=1.81.8",
    "loguru>=0.7.3",
    "modelscope>=1.34.0",
    "notebook>=7.4.1",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ragas>=0.4.3",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "wheel>=0.46.3",
]
